--- a/salary-calculator-2024-q2-169426418/src/components/AddEarningForm/AddEarningForm.css
+++ b/salary-calculator-2024-q2-169426418/src/components/AddEarningForm/AddEarningForm.css
@@ -1,9 +1,9 @@
-.add-deduction-form {
-  width: 540px;
-  height: 384px;
+.add-earning-form {
+  /* width: 540px;
+  height: 384px; */
   padding: 250px;
   border-radius: 10px;
-  background-color: aqua;
+  background-color: white;
   position: absolute;
   top: 258px;
   left: 450px;
@@ -16,28 +16,58 @@
 .include-etf-epf {
   display: flex;
   align-items: center;
+  position: absolute;
+  top: 460px;
+  left: 281px;
   margin-bottom: 10px;
 }
 .include-etf-epf label {
   font-size: 0.8rem;
   color: #666;
 }
-
 .footer {
+  width: 540px;
+  height: 72px;
+  top: 570px;
+  left: 450px;
   display: flex;
 }
-.footer button {
-  background-color: #0052ea;
+
+.cancle-button {
+  width: Hug (60px) px;
+  height: Hug (40px) px;
+  position: absolute;
+  top: 465px;
+  left: 620px;
+  padding: 12px 16px 12px 16px;
+  gap: 10px;
+  border-radius: 4px 0px 0px 0px;
+  opacity: 0px;
+}
+
+.cancle-button-text {
+  color: #0052ea;
+}
+.add-button {
   color: white;
-  margin: auto;
+  padding: 8px 20px;
+  border: none;
+  border-radius: 4px;
+  position: absolute;
+  top: 470px;
+  left: 700px;
   cursor: pointer;
 }
-
-.footer button:hover {
-  background-color: #0052ea;
+.button-text {
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  text-align: left;
 }
 
-.divider {
-  /* width: 84px; */
-  color: black;
+.add-button-text {
+  background: #0052ea;
+  box-shadow: 0px 1px 4px 0px #0000001a inset;
+  color: white;
 }
