--- a/salary-calculator-2024-q2-169426418/src/components/SalaryForm/SalaryForm.css
+++ b/salary-calculator-2024-q2-169426418/src/components/SalaryForm/SalaryForm.css
@@ -5,17 +5,15 @@
   left: 152px;
   margin: 0 auto;
   opacity: 1px;
-  border-width: 0px;
-  border-style: solid;
-  border-color: #e0e0e0;
+  border: 1px solid #e0e0e0;
   position: relative;
 }
 .salary-calculator-title {
   width: 209px;
   height: 32px;
   position: absolute;
-  top: 166px;
-  left: 152px;
+  top: 0px;
+  left: 38px;
   gap: 0px;
   opacity: 1px;
 
@@ -53,23 +51,22 @@
   display: flex;
   flex-direction: column;
   width: 356px;
-  height: 80px px;
+  height: 86px px;
   margin-bottom: 20px;
   position: absolute;
-  top: 222px;
-  left: 152px;
+  top: 70px;
+  left: 38px;
   gap: 8px;
   opacity: 1px;
 }
 .basic-salary-lable {
   width: 94px;
   height: 24px;
-  gap: 0px;
   opacity: 1px;
   margin-bottom: 8px;
 }
 .basic-salary-input {
-  width: 94px;
+  width: 220px;
   height: 10px;
   padding: 12px 15px 12px 15px;
   margin-bottom: 5px;
@@ -84,8 +81,8 @@
   width: 248px;
   height: 48px;
   position: absolute;
-  top: 326px;
-  left: 152px;
+  top: 106px;
+  left: 38px;
   margin-top: 20px;
   margin-bottom: 20px;
   gap: 4px;
@@ -103,8 +100,6 @@
 .earning-title {
   width: 68px;
   height: 24px;
-  gap: 0px;
-  opacity: 0px;
   text-align: right;
   color: #000000;
 }
@@ -120,10 +115,10 @@
 .add-allowance-button {
   height: 40px;
   position: absolute;
-  top: 516px;
-  left: 152px;
+  top: 320px;
+  left: 38px;
   gap: 10px;
-  padding: 8px 0px 8px 0px;
+  padding: 8px 0px;
   border-radius: 4px 0px 0px 0px;
   display: flex;
   align-items: center;
@@ -141,27 +136,27 @@
   cursor: pointer;
 }
 .earning-list {
-  width: Hug (311px) px;
-  height: Hug (32px) px;
+  width: 311px;
+  height: 32px;
   position: absolute;
-  top: 406px;
-  left: 120px;
+  top: 206px;
+  left: 0px;
   gap: 8px;
   opacity: 0px;
 }
 .divider-hr {
-  width: 488px;
+  width: 596px;
   height: 0px;
   position: absolute;
-  top: 566px;
-  left: 152px;
+  top: 366px;
+  left: 34px;
 }
 .deduction-form {
-  width: Hug (238px) px;
-  height: Hug (48px) px;
+  width: 238px;
+  height: 48px;
   position: absolute;
-  top: 582px;
-  left: 152px;
+  top: 370px;
+  left: 38px;
   gap: 4px;
   opacity: 0px;
 }
@@ -169,48 +164,41 @@
 .deducation-title {
   width: 88px;
   height: 24px;
-  gap: 0px;
-  opacity: 0px;
   color: #000000;
 }
 
 .deducation-desc {
   width: 248px;
   height: 20px;
-  gap: 0px;
-  opacity: 0px;
   color: #757575;
   text-align: left;
 }
 .deduction-button-form {
-  width: Hug (162px) px;
-  height: Hug (40px) px;
+  width: 162px;
+  height: 40px;
   padding: 8px 0px 8px 0px;
   gap: 10px;
   border-radius: 4px 0px 0px 0px;
   opacity: 0px;
 }
 .deduction-button-frame {
-  width: Hug (162px) px;
-  height: Hug (24px) px;
+  width: 162px;
+  height: 24px;
   gap: 4px;
   opacity: 0px;
 }
 .deducation-button {
   width: 134px;
   height: 20px;
-  gap: 0px;
-  opacity: 0px;
 }
 .add-deduction-button {
   width: 162px;
   height: 40px;
   position: absolute;
-  top: 756px;
-  left: 152px;
+  top: 556px;
+  left: 38px;
   gap: 10px;
-  opacity: 0px;
-  padding: 8px 0px 8px 0px;
+  padding: 8px 0px;
   border-radius: 4px 0px 0px 0px;
   display: flex;
   align-items: center;
@@ -220,8 +208,8 @@
   width: 124px;
   height: 10px;
   position: absolute;
-  top: 654px;
-  left: 120px;
+  top: 446px;
+  left: 0px;
   gap: 8px;
   opacity: 0px;
 }
@@ -231,11 +219,10 @@
   height: 24px;
   gap: 4px;
   position: absolute;
-  top: 196px;
-  right: 54px;
+  top: 30px;
+  right: 48px;
   display: flex;
   align-items: center;
-  /* justify-content: center; */
 }
 
 .reset-button {
@@ -255,7 +242,6 @@
 }
 
 /* popup */
-/* SalaryForm.css */
 
 .background-dimmed {
   background-color: rgba(0, 0, 0, 0.1); /* Light overlay */
